# gen-ai-app-dev

./: .gitignore  README.md  main.py  payment_workflow_checkpointer_store.db  pyproject.toml
AI-Essentials/: basic-neural-network.ipynb  basic_neural_network_demo.ipynb  machine-learning-functions.ipynb  numpy-basics.ipynb  padas-basics.ipynb  pytorch-fundamentals.ipynb
Agentic-RAG/: README.md  ReAct-basics-DELETE.ipynb  ReAct-basics.ipynb  Untitled.ipynb  create-agent-functions.ipynb  langchain-tool-calling-agent.ipynb  langgraph-checkpointing.ipynb  langgraph-pre-built-agents.ipynb  langgraph-stategraph.ipynb  project-customer-discounts-v1.ipynb  project-customer-discounts-v2.ipynb  project-customer-discounts-v3.ipynb  scratch-multi-step-react-agent.ipynb  scratch-react-agent-ROUGH.ipynb  scratch-react-agent.ipynb  scratch-single-step-action.ipynb  z-DELETE-IT.ipynb
Datasets/: Untitled.ipynb  chat-templates-basics.ipynb  create-upload-newsgroup20-dataset.ipynb  datasets-library.ipynb  embedded_movies_small.ipynb
Embeddings/: 1-movies-recommendation-FAISS.ipynb  2-movies-index-performance-FAISS.ipynb  FAISS-basics.ipynb  benchmark-ann-movies.ipynb  embeddings-visualization-newsgroupdata-.ipynb  sentence-bert-models.ipynb
Endpoints/: README.md  ollama-usage.ipynb
Evaluation/: huggingface-evaluate-library.ipynb  llm-judge-under-the-covers.ipynb  ragas-evaluate-eval-dataset.ipynb  ragas-prepare-eval-dataset.ipynb
Fine-Tuning/: 3.1.0  AutoGPTQ_transformers.ipynb  Llama_3_1_8b_Unsloth_2x_faster_finetuning.ipynb  LoRA-fine-tuning-SFTTrainer.ipynb  Peft-LORA-Basics.ipynb  Quantization-Quonto-Library.ipynb  README.md  evaluate-cohere-toxicity-classifier.ipynb  fine-tune-SFTTrainer.ipynb  fine-tuning-BERT-HF-Trainer.ipynb  fine-tuning-dataset-essentials.ipynb  fine-tuning-dataset-format.ipynb  full-fine-tuning-SFTTrainer.ipynb  gpu-memory-estimator.ipynb  quantization-demo.ipynb  (+4 more)
(+302 files in other folders)
