[project]
name = "gen-ai-app-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.1.0",
    "evaluate>=0.4.3",
    "langchain-ai21>=0.1.7",
    "langchain-anthropic>=0.1.23",
    "langchain-cohere>=0.2.2",
    "langchain-google-genai>=0.7.2",
    "langchain-groq>=0.2.3",
    "langchain-huggingface>=0.0.3",
    "langchain-ollama>=0.1.3",
    "langchain-openai>=0.1.22",
    "strands-agents[openai]>=0.1.6",
    "strands-agents-tools>=0.0.1",
    "transformers>=4.52.4",
    "trl>=0.12.2",
    "langgraph>=0.5.1",
]

[tool.uv.workspace]
members = ["temp/mcp/weather-stock-client", "temp/mcp/test-client"]
