[project]
name = "gen-ai-app-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.1.0",
    "evaluate>=0.4.3",
    "huggingface-hub>=0.34.4",
    "langchain>=0.3.26",
    "langchain-ai21>=0.1.7",
    "langchain-anthropic>=0.1.23",
    "langchain-cohere>=0.2.2",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=0.7.2",
    "langchain-groq>=0.2.3",
    "langchain-huggingface>=0.0.3",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama>=0.1.3",
    "langchain-openai>=0.1.22",
    "langgraph>=0.5.3",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "torch>=2.8.0",
    "transformers>=4.55.0",
    "trl>=0.12.2",
]
